[package]
name = "grammar_nazi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = "0.12.1"
tokio = {version = "1", features = ["full"]} 
reqwest = "0.12.4"
serde_json = "1.0.117"
dotenv = "0.15.0"
